--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "magic-triangle",
+  "homepage": "https://hpr-triangle.github.io/sleep-assessment/",
   "version": "0.0.0",
   "private": true,
   "scripts": {
